[package]
name = "merkle_proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/wgr523/halo2.git" }
rand = "0.8"
ff = "0.13"
halo2_gadgets = { git = "https://github.com/wgr523/halo2.git" }